--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.0",
+    "dotenv": "^16.0.3",
     "next": "12.x.x",
     "postcss": "^8.4.4",
     "react": "17.x.x",
@@ -22,9 +23,15 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^2.3.0",
+    "@tanstack/react-query": "^4.24.4",
+    "@tanstack/react-query-devtools": "^4.24.4",
     "@types/node": "16.11.9",
     "@types/react": "17.0.35",
-    "eslint-config-next": "12.0.4"
+    "axios": "^1.3.2",
+    "eslint-config-next": "12.0.4",
+    "fs": "^0.0.1-security",
+    "os": "^0.1.2",
+    "path": "^0.12.7"
   },
   "peerDependencies": {
     "eslint": "*",
