--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -18,9 +18,10 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["components/*"],
-      "@store/*": ["store/*"]
+      "@store/*": ["store/*"],
+      "@hooks/*":["hooks/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["index.d.ts","next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
 }
