--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.7",
     "autoprefixer": "^10.4.0",
     "dotenv": "^16.0.3",
     "next": "12.x.x",
