--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -20,7 +20,8 @@
       "@components/*": ["components/*"],
       "@store/*": ["store/*"],
       "@hooks/*": ["hooks/*"],
-      "@utils/*": ["utils/*"]
+      "@utils/*": ["utils/*"],
+      "@service/*":["service/*"]
     }
   },
   "include": ["index.d.ts","next-env.d.ts", "**/*.ts", "**/*.tsx"],
